--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "connectkit": "^1.4.0",
+    "ethers": "^5",
     "lucide-react": "^0.241.0",
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
