--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-use": "^17.4.0",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
